--- a/paper.tex
+++ b/paper.tex
@@ -27,6 +27,7 @@
 \newcommand{\ket}[1]{|#1 \rangle}
 \newcommand{\bracket}[2]{\langle #1|#2 \rangle}
 \newcommand{\matel}[3]{\bra{#1} #2 \ket{#3}}
+\newcommand{\ai}{{\it ab~initio} }
 
 \begin{abstract}
 	\input{abstract}
