Implement Jim's first correction

--- a/body.tex
+++ b/body.tex
@@ -161,15 +161,15 @@ quasiparticle energies. Hence the inclusion of the electrodes into the
 CI problem using electrode self-energies is complicated by the fact that
 the self-energies are functions of the quasiparticle energies on the
 electrodes. To avoid this complication, we employ instead energy-independent
-\acp{CAP} that serve as replacement to the self-energy terms without ???
-while eliminating reference to single particle energies into the resulting
-\ac{CI} problem. Note however, that by opening the system using either
-electrode self-energies or \acp{CAP},  the traditionally Hermitian \ac{CI}
-generalized eigenvalue problem becomes a complex symmetric generalized
-eigenvalue problem. The procedure for construction of an energy-independent
-\ai \ac{CAP} from the energy-dependant self-energy is discussed in detail
-in ref.~\cite{henderson}. We briefly cover the essential points needed for the
-generation of the \ac{CAP} in the following.
+\acp{CAP} that serve as replacement to the self-energy terms, eliminating
+reference to single particle energies into the resulting \ac{CI} problem.
+Note however, that by opening the system using either electrode self-energies
+or \acp{CAP},  the traditionally Hermitian \ac{CI} generalized eigenvalue
+problem becomes a complex symmetric generalized eigenvalue problem. The
+procedure for construction of an energy-independent \ai \ac{CAP} from the
+energy-dependant self-energy is discussed in detail in ref.~\cite{henderson}.
+We briefly cover the essential points needed for the generation of the
+\ac{CAP} in the following.
 
 We first consider two electrodes described by known left ($\Sigma_L(\omega)$)
 and right ($\Sigma_R(\omega)$) self-energies. In practice, the complex valued
