Implement Jim's second correction

--- a/body.tex
+++ b/body.tex
@@ -352,16 +352,14 @@ as due to the introduction of electron correlations which we study for
 the molecular device states.
 From the transmission calculations on our model using a scattering Green's
 function approach, the transmission of the states that evolve from the
-uncoupled device states. % ??? This sentence doesn't make sense to me;
-                         % I don't understand what you're trying to say.
-It is found that these states have transmission values close to unity and
-their lineshapes can be roughly approximated by a lorentzian profile (there
-is some indication of Fano-type resonances indicating that there is a degree
-of coupling between left and right electrodes, but these effects are small
-and do not influence our results). Thus in order to compare to
-transmission spectra obtained from the single-particle scattering
-Green's function calculations picture, we construct Lorentzian peaks from
-the complex quasiparticles $\omega_i$:
+uncoupled device states is determined. It is found that these states have
+transmission values close to unity and their lineshapes can be roughly
+approximated by a Lorentzian profile (there is some indication of Fano-type
+resonances indicating that there is a degree of coupling between left and
+right electrodes, but these effects are small and do not influence our
+results). Thus in order to compare to transmission spectra obtained from the
+single-particle scattering Green's function calculations picture, we construct
+Lorentzian peaks from the complex quasiparticles $\omega_i$:
 \begin{equation}
         f(\varepsilon;\omega_i)
         = \frac{\left( \Gamma/2 \right)^2}
