change title to jim's suggestion

--- a/paper.tex
+++ b/paper.tex
@@ -13,8 +13,8 @@
 \usepackage{cite}
 
 \author{Mark Szepieniec, Irene Yeriskin, Jim Greer}
-\title{Evaluation of Quasiparticle Levels in Correlated Gold Chains Using
-       Configuration Interaction and Complex Absorbing Potentials}
+\title{Influence of Electron Correlation on Single Particle State Energies and
+       Lifetimes in an Atomic Chain Model of a Tunnel Junction}
 
 \input{acronyms}
 
