update intro, add muga citation

--- a/body.tex
+++ b/body.tex
@@ -63,29 +63,22 @@ In the following, we apply the method of configuration interaction to a
 simple model of electrodes coupled to atomic chain to investigate the
 influence of electron correlations on quasiparticle states arising from
 the device region, and in addition we consider the influence of electrode
-excitations as they couple to the device region. This approach enables
-us to study the junction in an uncorrelated limit (single determinant
-approximation), and to systematically include electron correlations on
-the device region and electrodes to study how the quasiparticle states
-evolve. By allowing electrode excitations to enter the calculation, we
-are able to explore how correlated electrons on the device region
-interact with electrode excitations.
+excitations as they couple to the device region. Coupling to the leads is
+modeled by a \ac{CAP}~\cite{muga} which has been constructed specifically to
+yield the same complex energy eigenvaules as would have a conventional lead
+self-energy~\cite{henderson}. This approach enables us to study the junction
+in an uncorrelated limit (single determinant approximation), and to
+systematically include electron correlations on the device region and
+electrodes to study how the quasiparticle states evolve. By allowing electrode
+excitations to enter the calculation, we are able to explore how correlated
+electrons on the device region interact with electrode excitations.
 
-% In earlier work~\cite{henderson}, a method was outlined in which an
-% energy-dependent self-energy is mapped to an energy-independent
-% \ac{CAP}, which, when added to the Hamiltonian, can be used in a
-% many-body treatment of the system. Here, we present a continuation of
-% that work, applying the method to a chain of atoms with interacting
-% electrons, and using a complex \ac{CI} scheme for the calculation of
-% electronic structure. Different levels of correlation are studied by
-% varying the threshold parameter for \acp{CSF} in the \ac{CI} calculation.
-% 
-% The rest of this paper is organized as follows: in
-% section~\ref{sec:method}, we cover the methods used in this work, both for
-% constructing the \ac{CAP} and for solving the resulting complex symmetric
-% many-body problem. In section~\ref{sec:results} we present and discuss some
-% results of applying the formalism to a simple atomic chain system. Finally,
-% section~\ref{sec:conclusions} contains conclusions and further perspectives.
+The rest of this paper is organized as follows: in
+section~\ref{sec:method}, we cover the methods used in this work, both for
+constructing the \ac{CAP} and for solving the resulting complex symmetric
+many-body problem. In section~\ref{sec:results} we present and discuss some
+results of applying the formalism to a simple atomic chain system. Finally,
+section~\ref{sec:conclusions} contains conclusions and further perspectives.
 
 \section{Method}
 \label{sec:method}
