decapitalize acronyms, add lda acronym (credit to Jim)

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,10 +1,11 @@
-\acrodef{MCCI}{Monte Carlo Configuration Interaction}
-\acrodef{CAP}{Complex Absorbing Potential}
-\acrodef{CSF}{Configuration State Function}
-\acrodef{CI}{Configuration Interaction}
-\acrodef{DFT}{Density Functional Theory}
-\acrodef{NEGF}{Nonequilibrium Green's Function}
-\acrodef{HOMO}{Highest Occupied Molecular Orbital}
-\acrodef{LUMO}{Lowest Unoccupied Molecular Orbital}
-\acrodef{IP}{Ionization Potential}
-\acrodef{EA}{Electron Affinity}
+\acrodef{MCCI}{Monte Carlo configuration interaction}
+\acrodef{CAP}{complex absorbing potential}
+\acrodef{CSF}{configuration state function}
+\acrodef{CI}{configuration interaction}
+\acrodef{DFT}{density functional theory}
+\acrodef{NEGF}{nonequilibrium Green's function}
+\acrodef{HOMO}{highest occupied molecular orbital}
+\acrodef{LUMO}{lowest unoccupied molecular orbital}
+\acrodef{IP}{ionization potential}
+\acrodef{EA}{electron affinity}
+\acrodef{LDA}{local density approximation}
